# AI-Voice-Assistant

./: .gitignore  pyproject.toml  server.py
src/app/: lifespan.py  llm.py  settings.py  stt.py  tts.py
src/app.egg-info/: SOURCES.txt
